$Id: History,v 1.13 2000-11-11 06:33:56 tsasaki Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
Nov 04,00 T.Sasaki (tracking-V02-00-02)
- G4TrackingManager.icc has been modified for new biasing schme
- Descriptions are added too header files
- 
Aug 30,00 T.Sasaki (tracking-V02-00-01)
- Protection for no AtRestDoIt procs. 
June 2, 00 M.Asai (tracking-01-01-01)
- Add SetUserTrackInformation(G4VUserTrackInformation*) to
 G4TrackingManager
- Fix problems in deleteing Touchable in G4SteppingManager (Hisaya) 

Hune 1, 00 H.Kurashige
- Add "const" to all G4VTouchable pointer

Jan 23, 00 T.Sasaki 
- GetCurrentValue() in G4TrackingMessenger.cc have a return value
- SetUserAction in G4SteppingManager.hh protected null pointers
Oct 22, 99 T.Sasaki G4SteppingMangaer.cc fixed the UserLmit problem     
Oct 13, 99 T.Sasaki updated G4SteppingVerbose and G4VSteppingVerbose 
Jun 29, 99 G.Folger have the ctor always assign a SteppingVerbose to fVerbose
Apr 15, 99 M.Asai (tracking-01-00-03)
- Make arguments in user action classes take const pointers.
- Make trajectory and trajectory point as derivable classes.
Mar 23, 99 T.Sasaki    (tracking-01-00-02)