@@ -1,4 +1,4 @@
-$Id: History,v 1.13 2000-11-11 06:33:56 tsasaki Exp $
+$Id: History,v 1.14 2001-01-12 05:55:19 tsasaki Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,8 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Jan 12,01 T.Sasaki (tracking-V03-00-01)
+- correction of class description 
 Nov 04,00 T.Sasaki (tracking-V02-00-02)
 - G4TrackingManager.icc has been modified for new biasing schme
 - Descriptions are added too header files
